saving 2025-06-11 update headers

--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -16,12 +16,9 @@
         </div>
         <div class="container">
             <div class="profile-icon">
-                <a href="/newPost" class="btn-primary">New Post</a>
-                <div>
-                    <img src="/static/svg/circle-user-round.svg" alt="user profile">
-                    <a href="/profile">{{.Username}}</a>
-                </div>
-                <a href="/logout">Logout</a>
+                <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
+                <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
+                <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
             </div>
         </div>
     </header>
