--- a/requirements/project/templates/profile.html
+++ b/requirements/project/templates/profile.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div id="project_header">
-            <h1><a href="/">FORUM</a></h1>
+            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
         </div>
         <div class="profile-icon">
-            <a href="/newPost" class="btn-primary">New Post</a>
-            <a href="/logout">Logout</a>
+            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
+            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
         </div>
     </header>
     <div class="profile">
