--- a/requirements/project/templates/error.html
+++ b/requirements/project/templates/error.html
@@ -10,6 +10,17 @@
 </head>
 
 <body>
+    <header>
+        <div id="project_header">
+            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
+        </div>
+        <div class="profile-icon">
+            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
+            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
+            <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
+        </div>
+    </header>
+    
     <div class="error-container">
         <h1 class="error-title">{{.ErrorTitle}}</h1>
         <p class="error-message">{{.ErrorMessage}}</p>
