--- a/requirements/project/templates/update.html
+++ b/requirements/project/templates/update.html
@@ -10,16 +10,14 @@
 </head>
 
 <body>
-    <header class="nav">
+    <header>
         <div id="project_header">
-            <h1><a href="/">FORUM</a></h1>
+            <h1><a href="/"><img src="/static/svg/favicon.svg" alt="user profile"></a></h1>
         </div>
-        <div class="container">
-            <div class="profile-icon">
-                <a href="/profile">{{.Username}}</a>
-                <a href="/logout">Logout</a>
-                <a href="/newPost" class="btn-primary">New Post</a>
-            </div>
+        <div class="profile-icon">
+            <a href="/newPost" class="btn-primary"><img src="/static/svg/pencil-line.svg" alt="new post"></a>
+            <a href="/logout"><img src="/static/svg/log-out.svg" alt="logout"></a>
+            <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
         </div>
     </header>
     {{if .Error}}
@@ -28,27 +26,30 @@
     </div>
     {{end}}
     {{if .username}}
-        <form class="" action="/profile/update/username/save" method="post">
-            <input type="text" id="username" name="username" placeholder="Please type your New Username" required>
-            <input type="password" id="current" name="current" placeholder="Please type your Password" required>
-            <button type="submit">Save</button>
-        </form>
+    <form class="" action="/profile/update/username/save" method="post">
+        <input type="text" id="username" name="username" placeholder="Please type your New Username" required>
+        <input type="password" id="current" name="current" placeholder="Please type your Password" required>
+        <button type="submit">Save</button>
+    </form>
     {{end}}
     {{if .email}}
-        <form action="/profile/update/email/save" method="post">
-            <input type="text" id="email" name="email" placeholder="Please type your New Email " required>
-            <input type="password" id="current" name="current" placeholder="Please type your Password" required>
-            <button type="submit">Save</button>
-        </form>
+    <form action="/profile/update/email/save" method="post">
+        <input type="text" id="email" name="email" placeholder="Please type your New Email " required>
+        <input type="password" id="current" name="current" placeholder="Please type your Password" required>
+        <button type="submit">Save</button>
+    </form>
     </div>
     {{end}}
     {{if .password}}
-        <form action="/profile/update/password/save" method="post">
-            <input type="password" id="current" name="current" minlength="8" maxlength="72" placeholder="Please type your Current Password" required>
-            <input type="password" id="new" name="new" minlength="8" maxlength="72" placeholder="Please type your New Password" required>
-            <input type="password" id="confirm" name="confirm" minlength="8" maxlength="72" placeholder="Please Confirm your New Password" required>
-            <button type="submit">Save</button>
-        </form>
+    <form action="/profile/update/password/save" method="post">
+        <input type="password" id="current" name="current" minlength="8" maxlength="72"
+            placeholder="Please type your Current Password" required>
+        <input type="password" id="new" name="new" minlength="8" maxlength="72"
+            placeholder="Please type your New Password" required>
+        <input type="password" id="confirm" name="confirm" minlength="8" maxlength="72"
+            placeholder="Please Confirm your New Password" required>
+        <button type="submit">Save</button>
+    </form>
     {{end}}
 
     <footer>
