--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -22,7 +22,7 @@
             <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
             {{else}}
             <a href="/register">Sign Up</a>
-            <a href="/login">Login</a>
+            <a href="/logingit push --set-upstream origin POSTHANDLER">Login</a>
             {{end}}
         </div>
     </header>
@@ -30,57 +30,57 @@
     <main class="smiha chi haja">
         <!-- the post content -->
         <div class="container">
-            <a href="/post?Id={{.Id}}">
+            
                 <div class="post">
-                    <div class="post_head" id="{{.Id}}">
-                        <h2>{{.Title}}</h2>
-                        <div>Published by <strong>{{.Publisher}}</strong> in <em>{{range .Catigories}}{{.}},
+                    <div class="post_head" id="{{.Post.Id}}">
+                        <h2>{{.Post.Title}}</h2>
+                        <div>Published by <strong>{{.Post.Publisher}}</strong> in <em>{{range .Post.Catigories}}{{.}},
                                 {{end}}</em></div>
                     </div>
 
                     <section>
-                        <p>{{.Content}}</p>
+                        <p>{{.Post.Content}}</p>
                     </section>
 
                     <footer>
                         <div id="likes_dislikes">
-                            {{if .IsLikedByUser}}
+                            {{if .Post.IsLikedByUser}}
                             <form action="/like" method="POST">
-                                <input type="hidden" name="post_id" value="{{.Id}}">
+                                <input type="hidden" name="post_id" value="{{.Post.Id}}">
                                 <button type="submit"><img src="/static/svg/green_like.svg"
-                                        alt="comment">{{.Likes}}</button>
+                                        alt="comment">{{.Post.Likes}}</button>
                             </form>
                             {{else}}
                             <form action="/like" method="POST">
-                                <input type="hidden" name="post_id" value="{{.Id}}">
-                                <button type="submit"><img src="/static/svg/like.svg" alt="comment">{{.Likes}}</button>
+                                <input type="hidden" name="post_id" value="{{.Post.Id}}">
+                                <button type="submit"><img src="/static/svg/like.svg" alt="comment">{{.Post.Likes}}</button>
                             </form>
                             {{end}}
                             {{if .IsDislikedByUser}}
                             <form action="/dislike" method="POST">
-                                <input type="hidden" name="post_id" value="{{.Id}}">
+                                <input type="hidden" name="post_id" value="{{.Post.Id}}">
                                 <button type="submit"><img src="/static/svg/red_dislike.svg"
-                                        alt="comment">{{.Dislikes}}</button>
+                                        alt="comment">{{.Post.Dislikes}}</button>
                             </form>
                         </div>
                         {{else}}
                         <form action="/dislike" method="POST">
-                            <input type="hidden" name="post_id" value="{{.Id}}">
+                            <input type="hidden" name="post_id" value="{{.Post.Id}}">
                             <button type="submit"><img src="/static/svg/dislike.svg"
-                                    alt="comment">{{.Dislikes}}</button>
+                                    alt="comment">{{.Post.Dislikes}}</button>
                         </form>
                 </div>
                 {{end}}
                 <form id="form_comment" action="/comment" method="POST">
-                    <input type="hidden" name="post_id" value="{{.Id}}">
+                    <input type="hidden" name="post_id" value="{{.Post.Id}}">
                     <textarea id="comment" name="comment" placeholder="comment..." minlength="1" maxlength="10000"
                         required></textarea>
                     <button type="submit"><img src="/static/svg/send.svg" alt="comment"></button>
                 </form>
 
-                {{if .Comments}}
+                {{if .Post.Comments}}
                 <ul>
-                    {{range .Comments}}
+                    {{range .Post.Comments}}
                     {{range $author, $comment := .}}
                     <li><strong>{{$author}}:</strong> {{$comment}}</li>
                     {{end}}
@@ -90,20 +90,17 @@
                 <p>No comments yet.</p>
                 {{end}}
                 {{if not .IsEdited}}
-                <p><time datetime="{{.Created_at}}">Created: {{.Created_at}}</time></p>
+                <p><time datetime="{{.Created_at}}">Created: {{.Post.Created_at}}</time></p>
                 {{else}}
                 <p>
-                    <time datetime="{{.Created_at}}">Created: {{.Created_at}}</time> |
-                    <time datetime="{{.Updated_at}}">Updated: {{.Updated_at}}</time>
+                    <time datetime="{{.Created_at}}">Created: {{.Post.Created_at}}</time> |
+                    <time datetime="{{.Updated_at}}">Updated: {{.Post.Updated_at}}</time>
                 </p>
                 {{end}}
                 </footer>
         </div>
-        </a>
         </div>
     </main>
-
-
     <footer>
         <div class="footer-container">
             <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
