saving 2025-06-12 merge with said comment pagination

--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -87,11 +87,11 @@
              
             <div class="pagination">
                 {{if .HasPrev}}
-                <a href="{{.PrevPage}}">Previous</a>
+                <a href="{{.PrevPage}}">◀</a>
                 {{end}}
                 <span>Page {{.CurrentPage}}</span>
                 {{if .HasNext}}
-                <a href="{{.NextPage}}">Next</a>
+                <a href="{{.NextPage}}">▶</a>
                 {{end}}
             </div>
             {{else}}
