Add style css for post

--- a/requirements/project/templates/post.html
+++ b/requirements/project/templates/post.html
@@ -22,12 +22,12 @@
             <a href="/profile"><img src="/static/svg/circle-user-round.svg" alt="user profile"></a>
             {{else}}
             <a href="/register">Sign Up</a>
-            <a href="/logingit push --set-upstream origin POSTHANDLER">Login</a>
+            <a href="/login">Login</a>
             {{end}}
         </div>
     </header>
 
-    <main class="smiha chi haja">
+    <main>
         <!-- the post content -->
         <div class="container">
 
@@ -109,7 +109,7 @@
         </div>
         </div>
     </main>
-    <footer>
+    <footer  class="page-footer">
         <div class="footer-container">
             <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
         </div>
