--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -1,6 +1,7 @@
 :root {
   --main-color: #0f172a;
   --border-color: #e4e7ea;
+  --icons-color: #748093;
 }
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Unbounded:wght@200..900&display=swap");
 * {
@@ -112,6 +113,8 @@ header .header__logo {
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
 }
+
+/*Main Section CSS*/
 .main-content{
     max-width: 80svw;
     margin: auto;
@@ -124,20 +127,20 @@ header .header__logo {
     text-align: center;
     width: 100%;
 }
-.main-content__posts .container{
+.main-content__posts{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
-.container .post {
+.main-content__posts .container{
     background-color: #ffffff;
     border: solid 1px var(--border-color);
     border-radius: 12px;
     padding: 20px;
     margin: 10px;
-    flex: 1 1 calc(33.333% - 20px);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 38svw;
+    width: 39svw;
 }
 .post .initial{
     display: flex;
@@ -146,11 +149,43 @@ header .header__logo {
     text-decoration: none;
     background-color: #F2F5F9;
     padding: 10px;
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     font-family: monospace;
     color: var(--main-color);
     font-size: 1.3rem;
     text-transform: uppercase;
+}
+.user_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.likes_dislikes_comment{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.likebtn, .dislikebtn{
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+}
+.likebtn:hover, .dislikebtn:hover{
+    scale: 1.1;
+    transition: all 0.3s ease-in-out;
+}
+.category{
+    display: inline-block;
+    background-color: #F2F5F9;
+    padding: 5px 10px;
+    border-radius: 20px;
+    color: var(--main-color);
+    font-size: 0.9rem;
 }
