--- a/requirements/project/templates/delete.html
+++ b/requirements/project/templates/delete.html
@@ -29,7 +29,7 @@
     {{end}}
     <div class="form-container">
         <form method="post">
-            <input type="password" name="password" id="password" placeholder="Enter Your Password" required><br>
+            <input type="password" name="password" id="password" placeholder="Enter Your Password" minlength="8" maxlength="72" required><br>
             <button formaction="/profile/delete/confirm">delete</button>
         </form>
     </div>
