--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -31,7 +31,7 @@
             <input type="password" id="password" name="password" minlength="8" maxlength="72" placeholder="Password"
                 required>
             <input type="password" id="confirm_password" name="confirm_password" minlength="8" maxlength="72"
-                placeholder="Confirm Password" maxlength="50" required>
+                placeholder="Confirm Password" required>
             <button type="submit">Register</button>
         </form>
         <p>Already have an account? <a href="/login">Login here</a>.</p>
