saving 2025-06-14 fix the front end limiting

--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -77,7 +77,7 @@
       vibrant community.</p>
     <div class="hero__cta">
       <a href="/newPost" class="btn-secondary" id="btn1">Creat a post</a>
-      <a href="/logout" class="btn-secondary" id="btn2">Log Out</a>
+      <a href="/profile" class="btn-secondary" id="btn2">Profile</a>
     </div>
   </section>
   {{end}}
