--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -1,7 +1,7 @@
 {{define "post_component"}}
 <div class="container">
-  <a href="/post?Id={{.Id}}">
-    <div class="post">
+  <div class="post">
+    <div class="top">
       <div class="post_head" id="{{.Id}}">
         <div class="user_container">
           <div class="initial">
@@ -16,56 +16,70 @@
             </div>
           </div>
         </div>
+        <span class="divider"></span>
         <h2>{{.Title}}</h2>
-        <div>Published by  {{if .HasCategories}}in{{end}} <em>{{range .Catigories}}{{.}},
-            {{end}}</em></div>
       </div>
-
       <section>
         <p>{{.Content}}</p>
       </section>
-  </a>
-  <div class="categories">
-    {{if .HasCategories}}
-    <div class="catigories">
-      {{range .Catigories}}
-      <span class="category">{{.}}</span>
-      {{end}}
     </div>
-    {{else}}
-    <div class="catigories">
-      <span class="catigory">Uncategorized</span>
-    </div>
-    {{end}}
-  </div>
-  <footer>
-    <div class="likes_dislikes_comment">
+    <div class="bottom">
+      <div class="categories">
+        {{if .HasCategories}}
+        <div class="catigories">
+          {{range .Catigories}}
+          <span class="category">{{.}}</span>
+          {{end}}
+        </div>
+        {{else}}
+        <div class="catigories">
+          <span class="category">Uncategorized</span>
+        </div>
+        {{end}}
+      </div>
+      <span class="divider"></span>
 
-      {{if .IsLikedByUser}}
-      <form action="/like" method="POST">
-        <input type="hidden" name="post_id" value="{{.Id}}">
-        <button type="submit" class="likebtn"><img src="/static/svg/green_like.svg" alt="comment"> {{.Likes}}</button>
-      </form>
-      {{else}}
-      <form action="/like" method="POST">
-        <input type="hidden" name="post_id" value="{{.Id}}">
-        <button type="submit" class="likebtn"><img src="/static/svg/like.svg" alt="comment"> {{.Likes}}</button>
-      </form>
-      {{end}}
-
-      {{if .IsDislikedByUser}}
-      <form action="/dislike" method="POST">
-        <input type="hidden" name="post_id" value="{{.Id}}">
-        <button type="submit" class="dislikebtn"><img src="/static/svg/red_dislike.svg" alt="comment"> {{.Dislikes}}</button>
-      </form>
-      {{else}}
-      <form action="/dislike" method="POST">
-        <input type="hidden" name="post_id" value="{{.Id}}">
-        <button type="submit" class="dislikebtn"><img src="/static/svg/dislike.svg" alt="comment"> {{.Dislikes}}</button>
-      </form>
-      {{end}}
-      <a href="/post?Id={{.Id}}#comment"><img src="/static/svg/comment.svg" alt="comment"> {{.CommentsCount}}</a>
+      <div class="likes_dislikes_comment">
+        {{if .IsLikedByUser}}
+        <form action="/like" method="POST">
+          <input type="hidden" name="post_id" value="{{.Id}}" />
+          <button type="submit" class="likebtn">
+            <img src="/static/svg/green_like.svg" alt="comment" /> {{.Likes}}
+          </button>
+        </form>
+        {{else}}
+        <form action="/like" method="POST">
+          <input type="hidden" name="post_id" value="{{.Id}}" />
+          <button type="submit" class="likebtn">
+            <img src="/static/svg/like.svg" alt="comment" /> {{.Likes}}
+          </button>
+        </form>
+        {{end}} {{if .IsDislikedByUser}}
+        <form action="/dislike" method="POST">
+          <input type="hidden" name="post_id" value="{{.Id}}" />
+          <button type="submit" class="dislikebtn">
+            <img src="/static/svg/red_dislike.svg" alt="comment" />
+            {{.Dislikes}}
+          </button>
+        </form>
+        {{else}}
+        <form action="/dislike" method="POST">
+          <input type="hidden" name="post_id" value="{{.Id}}" />
+          <button type="submit" class="dislikebtn">
+            <img src="/static/svg/dislike.svg" alt="comment" /> {{.Dislikes}}
+          </button>
+        </form>
+        {{end}}
+        <a href="/post?Id={{.Id}}#comment"
+          ><img src="/static/svg/comment.svg" alt="comment" />
+          {{.CommentsCount}}</a
+        >
+      </div>
+      <div class="ReadMore"></div>
     </div>
+    <!--<a href="/post?Id={{.Id}}">-->
+
+    <!--</a>-->
 
     <!--{{if not .IsEdited}}
     <p><time datetime="{{.Created_at}}">Created: {{.Created_at}}</time></p>
@@ -75,7 +89,6 @@
       <time datetime="{{.Updated_at}}">Updated: {{.Updated_at}}</time>
     </p>
     {{end}}-->
-  </footer>
   </div>
 </div>
 {{end}}
