--- a/requirements/project/static/css/form.css
+++ b/requirements/project/static/css/form.css
@@ -102,6 +102,10 @@ header .profile-icon a:hover {
 }
 
 .error-container {
+    position: absolute !important;
+    bottom: 30px;
+    right: 30px;
+    z-index: 200;
     background: rgba(255, 60, 60, 0.08);
     border: 1px solid rgba(255, 77, 77, 0.4);
     color: #ffcccc;
