--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -16,7 +16,7 @@
   <header class="header">
     <div class="header__logo">
       <a href="/" class="header__logo-link">
-        <img src="/static/svg/favicon.svg" alt="Logo" class="header__logo-img" />
+        <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
       </a>
     </div>
 
